Issue-1143: Slightly improve status contrast.

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -26,8 +26,8 @@ $nav-link-hover: rgba(255, 255, 255, 0.90);
 
 $global-link-color: #2684bd;
 
-$status-green: hsla(123, 106%, 35%, 1);
-$status-red: #f44336;
+$status-green: hsl(123, 100%, 40%);
+$status-red: hsla(0, 92%, 60%, 1);
 
 // Buttons
 $btn-primary-gradient-0: hsla(208, 92%, 58%, 1);
